Bug 91227 - VclPtr crash: paste special in Writer
Summary: VclPtr crash: paste special in Writer
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.0.0
Keywords:
Depends on:
Blocks: VclPtr
  Show dependency treegraph
 
Reported: 2015-05-11 17:00 UTC by Miklos Vajna
Modified: 2015-05-16 02:35 UTC (History)
0 users

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2015-05-11 17:00:35 UTC
How to reproduce:

1) Create a new Writer document.
2) Type "Aaa bbb."
3) Select "bbb", then Ctrl-C.
4) Press Ctrl-Shift-V, select "paste as RTF" -> Crash.
Comment 1 Gordo 2015-05-11 17:45:30 UTC
Could not reproduce.

Version: 5.0.0.0.alpha1+
Build ID: 25a0bd7b909fb8c87387d1413060f6c4ba5a51bd
TinderBox: Win-x86@39, Branch:master, Time: 2015-05-11_01:05:55

This might be related to a commit to fix bug 70318.  I still get the extra paragraph on this build though.
Comment 2 Commit Notification 2015-05-11 18:02:29 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c975bee3a7db0d318d1e460312be2922a09c7cea

tdf#91227 vcl: fix crash in ImplListBox during paste special in Writer

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Miklos Vajna 2015-05-11 18:06:25 UTC
No, that bug is independent, this was a null pointer deref problem in the ImplListBox class. The bug might have been Linux-specific, I did not test other platforms. The fix is nearly obvious, though.