tdf#91227 vcl: fix crash in ImplListBox during paste special in Writer

Change-Id: I65637e7a205c443ff104a1ed5469aabd69571635